Fixed overflow because long words in product-name

--- a/styles/partials/_described_product.scss
+++ b/styles/partials/_described_product.scss
@@ -212,6 +212,7 @@
         font-size: 24px;
         font-weight: 600;
         line-height: 1.2;
+        word-break: break-word;
 
         @media (min-width: 750px) {
           font-size: 35px;
